Barra de navegación con Bootstrap

--- a/index.html
+++ b/index.html
@@ -7,26 +7,42 @@
  <title>Siete Creative: Estudio Creativo</title>
  <link rel="stylesheet" href="https://use.typekit.net/rxb5wgu.css">
  <link rel="stylesheet" type="text/css" href="css/estilos.css">
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 
 <body>
- <!--Este es el div principal, donde esta contenido el Site ID y la barra de navegación-->
+ <!--Navbar hecha con bootstrap-->
  <div class="masterContainer">
-  <div class="topbarContainer">
-   <div class="site-id">
-    <a href="index.html">
-     <img class=logoSiete src="images/logo.png" alt="Logo Siete">
-    </a>
-   </div>
-   <!--Este es el div para la nav bar-->
-   <div class="nav">
-    <ul type="none" class="listNav">
-     <li class="listNavItem"><a href="pages/nuestro-trabajo.html">Nuestro trabajo</a></li>
-     <li class="listNavItem"><a href="pages/resultados.html">Resultados</a></li>
-     <li class="listNavItem"><a href="pages/quienes-somos.html">Quienes somos</a></li>
-     <li class="listNavItem"><a href="pages/contacto.html">Contacto</a></li>
-    </ul>
-   </div>
+  <div id="NavbarB" class="container-fluid fixed-top">
+   <nav id="contenedorNavB" class="navbar navbar-expand-lg">
+    <div id="contenedorInternoNavBar" class="container-fluid">
+     <a class="navbar-brand" href="index.html">
+      <img src="/images/logo.png" alt="" width="80">
+     </a>
+     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+     </button>
+     <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
+      <ul class="navbar-nav mx-auto mb-lg-0">
+       <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/pages/nuestro-trabajo.html">Nuestro trabajo</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="/pages/resultados.html">Resultados</a>
+       </li>
+       <li class="nav-item">
+        <a class="nav-link" href="/pages/quienes-somos.html">
+         Quienes somos
+        </a>
+       <li class="nav-item">
+        <a class="nav-link" href="pages/contacto.html">Contacto</a>
+       </li>
+      </ul>
+     </div>
+    </div>
+   </nav>
   </div>
   <!--Mensaje de bienvenida-->
   <div class="containerInterno containerInterno01">
@@ -91,6 +107,9 @@
      illum.</p>
    </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"
+   integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+ </div>
 </body>
 
 </html>
