Cambio en la ruta a la pagina nuestro trabajo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
       <ul class="navbar-nav mx-auto mb-lg-0">
        <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="/pages/nuestro-trabajo.html">Nuestro trabajo</a>
+        <a class="nav-link active" aria-current="page" href="pages/nuestro-trabajo.html">Nuestro trabajo</a>
        </li>
        <li class="nav-item">
         <a class="nav-link" href="/pages/resultados.html">Resultados</a>
